fix image size on mobile

--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,6 @@ footer a {
   }
 
   .image {
-    width: 200px;
+    width: 300px;
   }
 }
